Minor fixes - remove warnings - remove variable from launcher